--- a/public/assets/components/style.css
+++ b/public/assets/components/style.css
@@ -22,3 +22,11 @@
     border-radius: 50px;
     border: 2px solid #669A8E;
 }
+
+.btn-secondary-green:hover {
+    background-color: #2b6d5d;
+}
+
+.btn-primary-green:hover {
+    background-color: #2b6d5d;
+}
