feat (login and register) : add login and register page

--- a/public/assets/custom/style.css
+++ b/public/assets/custom/style.css
@@ -75,6 +75,14 @@
     margin-top: 128px;
 }
 
+.margin-top-76 {
+    margin-top: 76px;
+}
+
+.margin-bottom-80 {
+    margin-bottom: 80px;
+}
+
 /* Padding */
 .padding-top-66 {
     padding-top: 66px;
@@ -82,6 +90,15 @@
 
 .padding-bottom-66 {
     padding-bottom: 66px;
+}
+
+.padding-top-140 {
+    padding-top: 140px;
+}
+
+.padding-left-right-100 {
+    padding-left: 6.25rem;
+    padding-right: 6.25rem;
 }
 
 .card {
