feat (dashboard posting) : add dashboard posting page

--- a/public/assets/custom/style.css
+++ b/public/assets/custom/style.css
@@ -40,6 +40,10 @@
     font-size: 30px;
 }
 
+.font-size-25 {
+    font-size: 25px;
+}
+
 .font-size-18 {
     font-size: 18px;
 }
@@ -59,6 +63,10 @@
 /* Font Weight */
 .font-weight-600 {
     font-weight: 600;
+}
+
+.font-weight-500 {
+    font-weight: 500;
 }
 
 .font-weight-400 {
