--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -2,6 +2,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+body {
+    background-color: #ECF3F3;
+}
+
 .fredoka{
     font-family: 'Fredoka', sans-serif;
 }
