fear(user):add filter on user post's dashboar

--- a/public/assets/custom/style.css
+++ b/public/assets/custom/style.css
@@ -24,7 +24,7 @@
 
 /* Background Color */
 .bg-primary-1 {
-    background-color: #669A8E;
+    background-color: #669A8E !important;
 }
 
 /* Font Size */
