feat (CRUD) : Add CRUD Posting

--- a/public/assets/admin/css/custom.css
+++ b/public/assets/admin/css/custom.css
@@ -61,3 +61,9 @@ body {
     font-size: 12px;
     color: #1D75DA;
 }
+
+.img-posting-cover {
+    object-fit: cover;
+    height:300px;
+    width:100%;
+}
